# vimincadconverter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.full  LICENSE  README.md  SECURITY.md  docker-compose.queue.yml  docker-compose.yml  pyproject.toml  tracker.md
.github/workflows/: ci.yml  publish-image.yml
benchmarks/: README.md  cases.json
benchmarks/fixtures/: README.md  fixtures_metadata.json  noisy_plate.stl
deploy/: env.example
deploy/k8s/: README.md  deployment-api.yaml  deployment-rq-worker.yaml  deployment-thread.yaml  ingress.example.yaml  kustomization.yaml  pvc.yaml  redis.yaml  service-api.yaml
docs/: NORTH_STAR.md  api-reference.md  architecture.md  deploy-docker.md  deployment-guide.md  failure-modes.md  mvp.md  operations.md  scale-out-roadmap.md  supported-parts.md
scripts/: backup-mesh2cad-state.sh  set_github_repo_metadata.py
src/mesh2cad/: __init__.py  exceptions.py  main.py
src/mesh2cad/api/: __init__.py  app.py  middleware_request_id.py  schemas.py  security.py  service.py
src/mesh2cad/api/v1/: __init__.py  artifacts.py  router.py  schemas.py
src/mesh2cad/benchmarks/: __init__.py  cad_fixtures.py  runner.py
src/mesh2cad/cad/: __init__.py  build123d_builder.py  export.py  script_generator.py  vector_utils.py
src/mesh2cad/domain/: __init__.py  features.py  geometry.py  plan.py  primitives.py  reports.py  types.py
src/mesh2cad/jobs/: __init__.py  exceptions.py  retention.py  rq_support.py  rq_tasks.py  rq_worker.py  runner.py  webhook_delivery.py  worker.py  worker_subprocess.py
src/mesh2cad/mesh/: __init__.py  analysis.py  cleanup.py  geometry_input.py  io.py  open3d_distance.py  point_normals.py  point_normals_open3d.py  sampling.py
src/mesh2cad/observability/: __init__.py  access_middleware.py  logging_config.py  metrics.py
src/mesh2cad/pipeline/: __init__.py  align.py  fit_primitives.py  infer_features.py  infer_revolve.py  orchestrator.py  perf.py  synthesize.py  validate.py
src/mesh2cad/security/: __init__.py  body_limit.py  cad_script_runtime.py  file_validation.py  rate_limit.py  rate_limit_redis.py  server_paths.py  webhook_url.py
src/mesh2cad/ui/: __init__.py  auth.py  db.py  gradio_app.py  routes.py  state.py
src/mesh2cad/ui/static/: ui.css
src/mesh2cad/ui/templates/: base.html  dashboard.html  job_detail.html  login.html  setup.html
tests/: conftest.py  test_align_icp.py  test_api_v1.py  test_benchmarks.py  test_geometry_input.py  test_infer_pockets.py  test_mesh_pipeline_smoke.py  test_observability_security.py  test_repair_multibody.py  test_retention.py  test_rq_integration.py  test_vector_utils.py
